--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN+jCGZOE9kj70QMYxY39D5",
+      "authorship_tag": "ABX9TyMAPpdlG/Z+qkRhrJEcK1R/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -265,7 +265,7 @@
         "id": "XNSg7q8xm0XV",
         "outputId": "61819f05-8b8a-4afe-e7a0-675808efe851"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +302,7 @@
         "id": "8y_HPaxWpDDb",
         "outputId": "fb6ba55b-8a5c-4c7d-9578-27ad418a4c83"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,6 +312,53 @@
             "Enter reorder cost ($/year):1.5\n",
             "Enter holding cost ($/year):3\n",
             "EOQ=10.0 units\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ASSIGNMENT 3- NUMERICAL CALCULATOR**"
+      ],
+      "metadata": {
+        "id": "Lzz6w5ujxyMt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#INPUT\n",
+        "num1= float(input('1st number '))\n",
+        "num2= float(input('2nd number '))\n",
+        "op= input('Choose opearator(+,-,*,/):')\n",
+        "\n",
+        "if op==\"+\":\n",
+        " print(f'{num1}+{num2}={num1 + num2}')\n",
+        "if op==\"-\":\n",
+        " print(f'{num1}-{num2}={num1 - num2}')\n",
+        "if op==\"*\":\n",
+        " print(f'{num1}*{num2}={num1 * num2}')\n",
+        "if op==\"/\":\n",
+        " print(f'{num1}/{num2}={num1 / num2}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CMmmOR91xymt",
+        "outputId": "931f7109-5b1c-40fd-ebcf-b1734de2c3fe"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1st number 1\n",
+            "2nd number 1\n",
+            "Choose opearator(+,-,*,/):+\n",
+            "1.0+1.0=2.0\n"
           ]
         }
       ]
