--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMAPpdlG/Z+qkRhrJEcK1R/",
+      "authorship_tag": "ABX9TyPs4aH0SZyldaYgV34tzKbn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -349,7 +349,7 @@
         "id": "CMmmOR91xymt",
         "outputId": "931f7109-5b1c-40fd-ebcf-b1734de2c3fe"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,6 +359,101 @@
             "2nd number 1\n",
             "Choose opearator(+,-,*,/):+\n",
             "1.0+1.0=2.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ASSIGNMENT 4- PARKING GARAGE**"
+      ],
+      "metadata": {
+        "id": "qV8ML4aZz1RY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for hours in range(1, 9):\n",
+        "    fee = 5 + hours * 2.5\n",
+        "\n",
+        "    # Conditions\n",
+        "    if fee < 10:\n",
+        "        fee = 10\n",
+        "        print(\"Note: min fee is 10\")\n",
+        "    elif fee > 20:\n",
+        "        fee = 20\n",
+        "        print(\"Note: max fee is 20:\")\n",
+        "\n",
+        "    print(f\"Number of hours : {hours}  ${fee}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rluxzY-oz6aC",
+        "outputId": "8336c8aa-38e9-4761-b807-e642471f3cc3"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Note: min fee is 10\n",
+            "Number of hours : 1  $10\n",
+            "Number of hours : 2  $10.0\n",
+            "Number of hours : 3  $12.5\n",
+            "Number of hours : 4  $15.0\n",
+            "Number of hours : 5  $17.5\n",
+            "Number of hours : 6  $20.0\n",
+            "Note: max fee is 20:\n",
+            "Number of hours : 7  $20\n",
+            "Note: max fee is 20:\n",
+            "Number of hours : 8  $20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ASSIGNMENT 5- MOVIE THEATER**"
+      ],
+      "metadata": {
+        "id": "m-p6vq3BvBgU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for ad in range(0, 201, 25):\n",
+        "    revenue = 10 * (20 + 2 * ad**0.5) - 200 - ad\n",
+        "    print(ad, revenue)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u2S5ZoEdvGrp",
+        "outputId": "d439bc8a-0050-4ccc-f42e-7c3c204d001b"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 0.0\n",
+            "25 75.0\n",
+            "50 91.42135623730951\n",
+            "75 98.20508075688781\n",
+            "100 100.0\n",
+            "125 98.60679774997897\n",
+            "150 94.94897427831779\n",
+            "175 89.57513110645903\n",
+            "200 82.84271247461902\n"
           ]
         }
       ]
