--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPs4aH0SZyldaYgV34tzKbn",
+      "authorship_tag": "ABX9TyOSfz/ZN+rM2PgF8rCEHBrL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -389,13 +389,13 @@
         "    print(f\"Number of hours : {hours}  ${fee}\")"
       ],
       "metadata": {
+        "id": "rluxzY-oz6aC",
+        "outputId": "8336c8aa-38e9-4761-b807-e642471f3cc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "rluxzY-oz6aC",
-        "outputId": "8336c8aa-38e9-4761-b807-e642471f3cc3"
+        }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +439,7 @@
         "id": "u2S5ZoEdvGrp",
         "outputId": "d439bc8a-0050-4ccc-f42e-7c3c204d001b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,6 +454,53 @@
             "150 94.94897427831779\n",
             "175 89.57513110645903\n",
             "200 82.84271247461902\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ASSIGNMENT 6- APPEND ITEMS TO LIST ITERATIVELY**"
+      ],
+      "metadata": {
+        "id": "lbwfzPcGyiw-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = []  # Assign Value\n",
+        "\n",
+        "num = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "while num != 0:  # Conditional\n",
+        "    numbers.append(num)  # Add to the list\n",
+        "    # Update the value (inside the loop!)\n",
+        "    num = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "# Sorting (requested by the assignment)\n",
+        "numbers.sort(reverse=True)\n",
+        "print(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IkO94VDr1xc7",
+        "outputId": "684b92dd-f787-4e47-cc2c-5d4f0a15cfde"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 1\n",
+            "Enter a number: 5\n",
+            "Enter a number: 8\n",
+            "Enter a number: 0\n",
+            "[8, 5, 1]\n"
           ]
         }
       ]
