--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOSfz/ZN+rM2PgF8rCEHBrL",
+      "authorship_tag": "ABX9TyNEgZhONdsvLl1shxAf5gjc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -490,7 +490,7 @@
         "id": "IkO94VDr1xc7",
         "outputId": "684b92dd-f787-4e47-cc2c-5d4f0a15cfde"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,6 +501,81 @@
             "Enter a number: 8\n",
             "Enter a number: 0\n",
             "[8, 5, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Assignment 7- Rock-paper- Scissors**"
+      ],
+      "metadata": {
+        "id": "kDoqw7ljnaMq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "print(\"Welcome to Rock-Paper-Scissors!\")\n",
+        "\n",
+        "# Ask user if they want to play\n",
+        "play = input(\"Do you want to play? (yes/no): \").lower()\n",
+        "\n",
+        "while play == \"yes\":\n",
+        "    # Get user choice\n",
+        "    user_choice = input(\"Choose rock, paper, or scissors: \").lower()\n",
+        "\n",
+        "    # Make sure the user enters a valid choice\n",
+        "    if user_choice not in [\"rock\", \"paper\", \"scissors\"]:\n",
+        "        print(\"Invalid choice. Please try again.\")\n",
+        "        continue\n",
+        "\n",
+        "    # Computer makes a random choice\n",
+        "    computer_choice = random.choice([\"rock\", \"paper\", \"scissors\"])\n",
+        "    print(f\"The computer chose: {computer_choice}\")\n",
+        "\n",
+        "    # Decide the winner\n",
+        "    if user_choice == computer_choice:\n",
+        "        print(\"It's a tie!\")\n",
+        "    elif (user_choice == \"rock\" and computer_choice == \"scissors\") or \\\n",
+        "         (user_choice == \"scissors\" and computer_choice == \"paper\") or \\\n",
+        "         (user_choice == \"paper\" and computer_choice == \"rock\"):\n",
+        "        print(\"You win!\")\n",
+        "    else:\n",
+        "        print(\"Computer wins!\")\n",
+        "\n",
+        "    # Ask if they want to play again\n",
+        "    play = input(\"Do you want to play again? (yes/no): \").lower()\n",
+        "\n",
+        "print(\"Thanks for playing!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TdXC9jeBnZSP",
+        "outputId": "e40112ec-c52d-41a1-cd3b-c898673cc802"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Welcome to Rock-Paper-Scissors!\n",
+            "Do you want to play? (yes/no): yes\n",
+            "Choose rock, paper, or scissors: rock\n",
+            "The computer chose: paper\n",
+            "Computer wins!\n",
+            "Do you want to play again? (yes/no): yes\n",
+            "Choose rock, paper, or scissors: rock\n",
+            "The computer chose: paper\n",
+            "Computer wins!\n",
+            "Do you want to play again? (yes/no): no\n",
+            "Thanks for playing!\n"
           ]
         }
       ]
