--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNEgZhONdsvLl1shxAf5gjc",
+      "authorship_tag": "ABX9TyPGmRTJylAMl/Jy3rBm6nuM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -559,7 +559,7 @@
         "id": "TdXC9jeBnZSP",
         "outputId": "e40112ec-c52d-41a1-cd3b-c898673cc802"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,6 +576,47 @@
             "Computer wins!\n",
             "Do you want to play again? (yes/no): no\n",
             "Thanks for playing!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "** ASSIGNMENT 8- PRODUCT PRICES (Dictionaries)**"
+      ],
+      "metadata": {
+        "id": "SIxR9u_W6R0D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "products = {'p1': 9.95,\n",
+        "            'p2': 10.5}\n",
+        "\n",
+        "id = input('enter ID: ')\n",
+        "if id in products:\n",
+        " print(products[id])\n",
+        "else:\n",
+        "  print('id not found')\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DpbgLWN95xqI",
+        "outputId": "a842c45f-e8ba-47d9-f6ab-9594a1c6de40"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter ID: p3\n",
+            "id not found\n"
           ]
         }
       ]
