--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPGmRTJylAMl/Jy3rBm6nuM",
+      "authorship_tag": "ABX9TyOlRgIKOWGrcAY2QyWzrDNA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -508,7 +508,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Assignment 7- Rock-paper- Scissors**"
+        "**ASSIGNMENT 7- Rock-paper- Scissors**"
       ],
       "metadata": {
         "id": "kDoqw7ljnaMq"
@@ -583,7 +583,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "** ASSIGNMENT 8- PRODUCT PRICES (Dictionaries)**"
+        " **ASSIGNMENT 8- PRODUCT PRICES (Dictionaries)**\n",
+        "\n"
       ],
       "metadata": {
         "id": "SIxR9u_W6R0D"
@@ -617,6 +618,55 @@
           "text": [
             "enter ID: p3\n",
             "id not found\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ASSIGNMENT 9- Dynamic Dictionaries **"
+      ],
+      "metadata": {
+        "id": "CDkCtMdo_LxQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "names = {}\n",
+        "counter = 1\n",
+        "\n",
+        "for i in range(5):  # limitar a 5 nomes\n",
+        "    name = input(\"Enter a name: \")\n",
+        "\n",
+        "    if name in names:\n",
+        "        print(\"This name already exists, enter another name.\")\n",
+        "    else:\n",
+        "        names[name] = counter\n",
+        "        counter += 1\n",
+        "\n",
+        "print(names)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2In7GVY_BjP6",
+        "outputId": "124d116b-e4f7-4ca1-e1b8-ef6b47ce131d"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a name: gabi\n",
+            "Enter a name: carol\n",
+            "Enter a name: nanda\n",
+            "Enter a name: ana\n",
+            "Enter a name: rafa\n",
+            "{'gabi': 1, 'carol': 2, 'nanda': 3, 'ana': 4, 'rafa': 5}\n"
           ]
         }
       ]
