--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -690,7 +690,7 @@
         "id": "q4eoTxhvzi0F",
         "outputId": "a5a6035e-9ee9-4caf-f906-66b5ea9713a3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,7 +740,7 @@
         "id": "8jg6aSyN2Y_a",
         "outputId": "bb052a1a-a8a8-49c6-aaff-be0df935d408"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -751,13 +751,51 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ASSIGNMENT 11- Recursive Function"
+      ],
+      "metadata": {
+        "id": "lPBYESS86A_s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reverse_string(s):\n",
+        "    if len(s) <= 1: #using len to check if there is nothing left to reverse\n",
+        "        return s\n",
+        "    else:\n",
+        "        return s[-1] + reverse_string(s[:-1])  #take the last character and add to what function returns to the rest of the string\n",
+        "\n",
+        "print(reverse_string(\"gabi\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jn0cJMYD6Fdp",
+        "outputId": "3658f4e2-7997-46bf-cc8d-488fd7d12087"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ibag\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyORC5ZaMw57JNoolkE5mjc8",
+      "authorship_tag": "ABX9TyPhxcGA8rWfyrMYG0VU8ZTz",
       "include_colab_link": true
     },
     "kernelspec": {
