--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -779,7 +779,7 @@
         "id": "Jn0cJMYD6Fdp",
         "outputId": "3658f4e2-7997-46bf-cc8d-488fd7d12087"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -789,13 +789,144 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ASSIGNMENT 12 - QUALITY CONTROL MANAGER"
+      ],
+      "metadata": {
+        "id": "zk-cHPLqR_J7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def getValues(n: int) -> list:\n",
+        "    '''\n",
+        "    Creates and returns a list of weights\n",
+        "    Inputs:\n",
+        "    - n: number of items in the list\n",
+        "    Outputs:\n",
+        "    - A list\n",
+        "    '''\n",
+        "    items = []\n",
+        "    # function range only takes integers as inputs\n",
+        "    for i in range(n):\n",
+        "        try:\n",
+        "            item = float(input('enter a weight value: '))\n",
+        "        except Exception as e:\n",
+        "            print(e)\n",
+        "            item = 0.0  # fallback value if invalid input\n",
+        "        items.append(item)\n",
+        "    return items\n",
+        "\n",
+        "\n",
+        "def calcAverage(alist: list) -> float:\n",
+        "    '''\n",
+        "    Returns the AVG of list alist\n",
+        "\n",
+        "    Input:\n",
+        "    - alist: list of weights\n",
+        "\n",
+        "    Output:\n",
+        "    - the average value of list\n",
+        "    '''\n",
+        "    try:\n",
+        "        return sum(alist[2:]) / len(alist[2:])\n",
+        "    except Exception as e:\n",
+        "        print(e)\n",
+        "        return float('nan')\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    try:\n",
+        "        nun = int(input('how many weights? '))\n",
+        "        if nun <= 0:\n",
+        "            raise ValueError('num must be positive')\n",
+        "\n",
+        "        weights = getValues(nun)\n",
+        "        avg = calcAverage(weights)\n",
+        "        print(f'average weight: {avg:.2f} Lbs')\n",
+        "    except Exception as e:\n",
+        "        print(e)\n",
+        "\n",
+        "\n",
+        "\n",
+        "main()\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a9SDNhEJbPTM",
+        "outputId": "5ba94452-aacb-40ae-d521-4c5b6e0d9139"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "how many weights? -2\n",
+            "num must be positive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ASSIGNMENT 13- LOAN & NPV TOOLKIT"
+      ],
+      "metadata": {
+        "id": "cN9e_IUqcbPW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def roi(cost: float, revenue: float) -> float:\n",
+        "    assert isinstance(cost, (int, float)), \"cost must be int or float\"\n",
+        "    assert isinstance(revenue, (int, float)), \"revenue must be int or float\"\n",
+        "    assert cost != 0, \"cost must not be zero\"\n",
+        "    return (revenue - cost) / cost\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    c = float(input(\"Enter cost: \"))\n",
+        "    r = float(input(\"Enter revenue: \"))\n",
+        "    ret = roi(c, r)\n",
+        "    print(f\"ROI = {ret:.2f}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wb9vZZpZeiRY",
+        "outputId": "12ce3700-2770-48b7-8332-055583c94930"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter cost: -1\n",
+            "Enter revenue: 9\n",
+            "ROI = -10.00\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPhxcGA8rWfyrMYG0VU8ZTz",
+      "authorship_tag": "ABX9TyPb8ZSNvl2Mu91zOzfoAdH8",
       "include_colab_link": true
     },
     "kernelspec": {
