--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -864,7 +864,7 @@
         "id": "a9SDNhEJbPTM",
         "outputId": "5ba94452-aacb-40ae-d521-4c5b6e0d9139"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,7 +908,7 @@
         "id": "Wb9vZZpZeiRY",
         "outputId": "12ce3700-2770-48b7-8332-055583c94930"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -920,13 +920,70 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ASSIGNMENT 14- GREETING CLASS"
+      ],
+      "metadata": {
+        "id": "nb2AYv6Si2Ie"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Greeting:\n",
+        "    def __init__(self, first, last):\n",
+        "        self.first = first\n",
+        "        self.last = last\n",
+        "\n",
+        "    def __str__(self):\n",
+        "        return self.first + ' ' + self.last\n",
+        "\n",
+        "    def display(self, reverse=True):\n",
+        "        if reverse:\n",
+        "            print(f'{self.last}, {self.first}')\n",
+        "        else:\n",
+        "            print(f'{self.first} {self.last}')\n",
+        "\n",
+        "\n",
+        "name = Greeting('john', 'doe')\n",
+        "print(name)\n",
+        "\n",
+        "formal = True\n",
+        "\n",
+        "if formal:\n",
+        "    name.display(reverse=True)\n",
+        "else:\n",
+        "    name.display(reverse=False)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mgF9j1Nji89y",
+        "outputId": "a1647c92-9059-41eb-cc21-e20d81826ec4"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "john doe\n",
+            "doe, john\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPb8ZSNvl2Mu91zOzfoAdH8",
+      "authorship_tag": "ABX9TyOqUjC1Na4HXGKUGcR94Wys",
       "include_colab_link": true
     },
     "kernelspec": {
