--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -966,7 +966,7 @@
         "id": "mgF9j1Nji89y",
         "outputId": "a1647c92-9059-41eb-cc21-e20d81826ec4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -977,13 +977,222 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ASSIGNMENT 15- STUDENT CLASS"
+      ],
+      "metadata": {
+        "id": "9qZYg0kALZlD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "    # constructor: name and number are required\n",
+        "    def __init__(self, name, number):\n",
+        "        self.__name = name       # private attribute\n",
+        "        self.__number = number   # private attribute\n",
+        "        # when a student is first enrolled\n",
+        "        self.__courses = []      # start with empty list of courses\n",
+        "\n",
+        "    def get_name(self):\n",
+        "        return self.__name\n",
+        "\n",
+        "    def get_courses(self):\n",
+        "        return self.__courses\n",
+        "\n",
+        "    # updating attribute values\n",
+        "    def set_name(self, new_name):\n",
+        "        self.__name = new_name\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        # number of courses the student is enrolled in\n",
+        "        return len(self.__courses)\n",
+        "\n",
+        "    def enroll(self, course):\n",
+        "        if course in self.__courses:\n",
+        "            print('you are already enrolled')\n",
+        "        else:\n",
+        "            self.__courses.append(course)\n",
+        "\n",
+        "\n",
+        "# class instance outside the class\n",
+        "s = Student('Bob', 1234)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "EnOA-vCHLfg9"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s.get_name()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "7VLNQjimP4d8",
+        "outputId": "5aa036cd-6bd1-4235-b01b-72ba09d2d94d"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Bob'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s.get_courses()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lfYi5TNVP9nG",
+        "outputId": "cfeb8ad0-6db8-4886-b508-58ff21f3eeec"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s.enroll('ABC123')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8p5nSuYOQAPK",
+        "outputId": "428e973b-1d6b-42a9-8ddc-dd25c5565d67"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "you are already enrolled\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "how many classes enrolled?\n"
+      ],
+      "metadata": {
+        "id": "s4Iy_yVPQK2-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s.get_courses()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IwMMgLBHQNTO",
+        "outputId": "f6551df7-1157-40f7-fbfe-b03abb98abbb"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['ABC123']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ASSIGNMENT 16: CLASS POINT AND RECTANGLE"
+      ],
+      "metadata": {
+        "id": "4EAQaB1VQ0NL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Point:\n",
+        "    # constructor\n",
+        "    def __init__(self, x, y):\n",
+        "        self.x = x\n",
+        "        self.y = y\n",
+        "\n",
+        "    # method distance\n",
+        "    def distance(self, other):\n",
+        "        return ((self.x - other.x)**2 + (self.y - other.y)**2) ** 0.5\n",
+        "\n",
+        "\n",
+        "class Rectangle:\n",
+        "    def __init__(self):\n",
+        "        self.p1 = Point(0, 0)\n",
+        "        self.p2 = Point(4, 0)\n",
+        "        self.p3 = Point(4, 4)\n",
+        "        self.p4 = Point(0, 4)\n",
+        "        self.width = self.p1.distance(self.p2)\n",
+        "        self.height = self.p2.distance(self.p3)\n",
+        "\n",
+        "    # rectangle area\n",
+        "    def area(self):\n",
+        "        return self.width * self.height\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "xePN1lVeRFT5"
+      },
+      "execution_count": 10,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOqUjC1Na4HXGKUGcR94Wys",
+      "authorship_tag": "ABX9TyMCt/ODhl736/4ksT4+ktyW",
       "include_colab_link": true
     },
     "kernelspec": {
